[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_sdk = { path = "../../sdk" }
arch_program = { path = "../../program" }
electrs_client = { path = "../../electrs_client" }
bip322 = "0.0.9"

bitcoincore-rpc = "0.19.0"
hex = "0.4.3"
borsh = { version = "1.4.0", features = ["derive"] }
bitcoin = { version = "0.32.3", features = ["serde", "rand"] }
log = "0.4"
tracing.workspace = true
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "ansi"] }
rand_core = "0.6.4"
anyhow = "1.0.82"
serde_json = "1.0.128"
indicatif = "0.17.8"
termsize = "0.1.9"


[dev-dependencies]
serial_test = "3.1.1"

[lib]
path = "src/lib.rs"
