[package]
name = "create-new-account"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
arch_program = { path = "../../program" }
borsh = "1.5.3"
hex = "0.4.3"
arch_sdk = { path = "../../sdk" }
arch_test_sdk = { path = "../../test_sdk" }
bitcoin = { version = "0.32.3", features = ["serde"] }
rand = "0.8.5"
