[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_sdk = "0.5.8"
arch_program = "0.5.8"
apl-token = { path = "../../token", features = ["no-entrypoint"] }
apl-associated-token-account = { path = "../../associated-token-account", features = [
    "no-entrypoint",
] }


bitcoincore-rpc = "0.18.0"
hex = "0.4.3"
borsh = { version = "1.4.0", features = ["derive"] }
bitcoin = { version = "0.32.3", features = ["serde", "rand"] }
log = "0.4"
[dev-dependencies]

[lib]
path = "src/lib.rs"
