[package]
name = "keccak256-hash"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_sdk = "0.5.6"
arch_test_sdk = "0.5.6"
arch_program = "0.5.6"
borsh = { version = "1.4.0", features = ["derive"] }
hex = "0.4.3"
sha3 = "0.10"
log = "0.4"
tracing.workspace = true
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "ansi"] }

[dev-dependencies]
serial_test = "3.1.1"

[lib]
path = "src/lib.rs" 