[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_sdk = "0.6.1"
arch_program = "0.6.1"

bitcoincore-rpc = "0.18.0"
hex = "0.4.3"
borsh = { version = "1.4.0", features = ["derive"] }
bitcoin = { version = "0.31.0", features = ["serde", "rand"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
serde_json = "1.0.125"

[dev-dependencies]
serial_test = "3.1.1"
