[package]
name = "stake-example"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_sdk = { path = "../../sdk" }
arch_program = { path = "../../program" }
arch_test_sdk = { path = "../../test_sdk" }
hex = "0.4.3"
bincode = "1.3.3"

[dev-dependencies]
serial_test = "3.1.1"

[lib]
path = "src/lib.rs"