[package]
name = "keccak256hashprogram"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_program = "0.5.7"
borsh = { version = "1.4.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] } 